--- a/index.html
+++ b/index.html
@@ -4,20 +4,52 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="icon" href="assets/images/icon.png">
   <title>Lección 36 Encuentrame</title>
 </head>
 <body>
-  <!-- <a href="" class="button" id ="encuentrame">Encuentrame</a> -->
-  <input type="button" name="" value="encuentrame" id ="encuentrame">
-  <div id="map">
-
+  <header>
+    <section class="container-fluid">
+      <div class="tarifa none col-xs-3 col-xs-push-9 col-lg-2 col-lg-push-10 " id="tarifa">
+      </div>
+      <div class="header row text-center">
+        <div class="form-horizontal container">
+          <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+            <div class="input-group input-group-unstyled">
+              <span class="input-group-addon glyphicon glyphicon-map-marker"></span>
+              <input type="text" class="form-control col-xs-12" id="input-partida" placeholder="Ingresa tu punto de partida">
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 ">
+            <div class="input-group input-group-unstyled">
+              <span class="input-group-addon glyphicon glyphicon-record"></span>
+              <input type="text" class="form-control col-xs-12" id="input-destino" placeholder="Ingresa tu punto de destino">
+            </div>
+          </div>
+          <div class="col-lg-2 col-lg-offset-0 col-md-6 col-md-offset-0 col-sm-5 col-sm-offset-0 col-xs-6 col-xs-offset-3 border-right">
+            <div class="form-group">
+              <button class="btn btn-default" id ="trazar-ruta">Trazar tu ruta</button>
+            </div>
+          </div>
+          <div class="col-lg-2 col-lg-offset-0 col-md-6 col-md-offset-0 col-sm-5 col-sm-offset-0 col-xs-6 col-xs-offset-3">
+            <div class="form-group">
+              <button class="btn btn-default" id ="encuentrame">encuentrame</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </header>
+  <div class="" id="map">
   </div>
+  <section class="container-fluid">
+  </section>
 
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCxtG80hOs-asOyp5zFOS32pBy9tbc0xJM&callback=initMap">  </script>
-  <script type="text/javascript" src="assets/js/app.js">
-
-  </script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCxtG80hOs-asOyp5zFOS32pBy9tbc0xJM&callback=initMap&libraries=places">  </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="assets/js/app.js"> </script>
 </body>
 </html>
